created main elements in html

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Title</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
+        <h1>My Address Book App</h1>
+        <div>
+          <button class="newcontactbutton" value="New Contact">
+          <form action="#" method="POST" class="newcontactform">
+            First Name:<input type="text" name="firstname" placeholder="Kobe">
+            <br>
+            Last Name:<input type="text" name="lastname" placeholder="Bryant">
+            <br>
+            Email:<input type="email" placeholder="blackmamba24@gmail.com">
+            <br>
+            Photo URL:<input type="url" placeholder="https://nba.com/lakers/kobe_bryant">
+            <br>
+            <input type="submit" class="submitnewcontact" value="Submit New Contact">
+          </form>
+
+        </div>
+          <table>
+          <h3>Contact List</h5>
+          <tr><th>Photo</th><th>Name</th><th>Email</th><th>Twitter</th></tr>
+          <tbody class=contactlist></tbody>
+        </table>
+      </div>
+    </div>
 
     <div class="container">
       <h1>My Site Title</h1>
     </div>
+
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../public/js/main.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
