--- a/test/index.html
+++ b/test/index.html
@@ -16,8 +16,7 @@
 
     <script src="../bower_components/mocha/mocha.js"></script>
     <script src="../bower_components/chai/chai.js"></script>
-    <script>mocha.setup('bdd');</script>
-    <!-- http://mochajs.org/#interfaces -->
+    <script>mocha.setup('bdd');</script>    <!-- http://mochajs.org/#interfaces -->
     <!-- 'tdd' provides suite(), test(), setup(), & teardown() -->
     <!-- 'bdd' provides describe(), it(), before(), after(), beforeEach(), & afterEach() -->
     <script>
@@ -28,7 +27,6 @@
 
     <!-- include source files here... -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/async/lib/async.js"></script>
     <script src="../bower_components/lodash/lodash.min.js"></script>
     <script src="../public/js/main.js"></script>
     <!-- include spec files here... -->
@@ -42,4 +40,3 @@
     </script>
   </body>
 </html>
-
