--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
         <table><thead></thead><tbody></tbody></table>
       </div>
     </div>
-
+    <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
     <script src="../bower_components/mocha/mocha.js"></script>
     <script src="../bower_components/chai/chai.js"></script>
     <script>mocha.setup('bdd');</script>    <!-- http://mochajs.org/#interfaces -->
