--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Title</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../app/styles/main.scss">
   </head>
     <body>
         <div class="large-12 columns">
@@ -44,7 +44,7 @@
              </div>
             </div>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../public/js/main.js"></script>
+    <script src="../app/js/main.js"></script>
   </body>
 </html>
 
