everything functioning but the login

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <body>
         <div class="large-12 columns">
           <h1>My Address Book App</h1>
-        </div>   
-          <div id="newcontact">
+        </div>
+          <div>
           <button id="newcontactbutton" type="button">New Contact</button>
           </div>
             <div class="row">
@@ -45,6 +45,7 @@
             </div>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../public/js/main.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
   </body>
 </html>
 
