--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,15 @@
   </head>
   <body>
         <h1>My Address Book App</h1>
-        <div>
+        <form id="loginform" action"#">
+        <input type="email">
+        <br>
+        <input type="password">
+        <br>
+        <button type="button" id="loginbutton">Login</button>
+        <button type="button" id="register">Register</button>
+        </form>
+         <div>
           <button class="newcontactbutton" type="button">New Contact</button>
         </div>
           <form action="#" method="POST" id="newcontactform">
