--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Title</title>
-    <link rel="stylesheet" href="../app/styles/main.scss">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
-        <h1>My Address Book App</h1>
+    <body>
+        <div class="large-12 columns">
+          <h1>My Address Book App</h1>
         <form id="loginform" action"#">
         <input type="email">
         <br>
@@ -18,34 +19,41 @@
         <button type="button" id="register">Register</button>
         </form>
          <div>
-          <button class="newcontactbutton" type="button">New Contact</button>
+          <button id="newcontactbutton" type="button">New Contact</button>
         </div>
-          <form action="#" method="POST" id="newcontactform">
-            First Name:<input class="contactinput" id="firstname" type="text" name="firstname" placeholder="Kobe">
-            <br>
-            Last Name:<input class="contactinput" id="lastname" type="text" name="lastname" placeholder="Bryant">
-            <br>
-            Email:<input class="contactinput" id="email" type="email" placeholder="blackmamba24@gmail.com">
-            <br>
-            Photo URL:<input class="contactinput" id="photourl" type="url" placeholder="https://nba.com/lakers/kobe_bryant">
-            <br>
-            <button id="submitcontact" type="submit">Submit</button>
-          </form>
-        </div>
-          <table>
-          <h3>Contact List</h5>
-          <tr><th>Photo</th><th>Name</th><th>Email</th><th>Twitter</th></tr>
-          <tbody class=contactlist></tbody>
-        </table>
-      </div>
-    </div>
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<<<<<<< HEAD:app/index.html
-    <script src="../app/js/main.js"></script>
-=======
-    <script src="../public/js/main.js"></script>
-    <script src="js/main.js"></script>
->>>>>>> parent of 3be9bfb... started anew app and reconstructed everything:public/index.html
+            <div class="row">
+              <div class="large-3 columns">
+                <form action="#" id="newcontactform" class="hidden">
+                  <h5>First Name:</h5>
+                  <input class="contactinput" id="firstname" type="text" name="firstname" placeholder="Kobe", required>
+                  <br>
+                  <h5>Last Name:</h5>
+                  <input class="contactinput" id="lastname" type="text" name="lastname" placeholder="Bryant", required>
+                  <br>
+                  <h5>Email:</h5>
+                  <input class="contactinput" id="email" type="email" placeholder="blackmamba24@gmail.com", required>
+                  <br>
+                  <h5>Twitter:</h5>
+                  <input class="contactinput" id="twitter" type"text" placeholder="#awesome", required>
+                  <h5>Photo URL:</h5>
+                  <input class="contactinput" id="photourl" type="url">
+                  <br>
+                  <button id="submitcontact" type="button">Submit</button>
+                </form>
+              </div>
+              <div class="large-9 columns">
+              <table>
+                <h3>Contact List</h5>
+                <br>
+                <th>Photo</th><th>First Name</th><th>Last Name</th><th>Email</th><th>Twitter</th>
+                <tbody id="tableofcontacts" class="maintable"></tbody>
+              </table>
+             </div>
+            </div>
+     <script src="vendor/jquery.min.js"></script>
+     <script src="vendor/firebase.js"></script>
+     <script src="js/main.js"></script>
   </body>
 </html>
+
 
