--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,7 @@
+
 <!doctype html>
+
+
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
@@ -50,8 +53,9 @@
               </table>
              </div>
             </div>
-     <script src="vendor/jquery.min.js"></script>
-     <script src="vendor/firebase.js"></script>
+     <script src="./vendor/jquery.min.js"></script>
+     <script src="./vendor/lodash.min.js"></script>
+     <script src="./vendor/firebase.js"></script>
      <script src="js/main.js"></script>
   </body>
 </html>
