--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
-
 <!doctype html>
-
-
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Title</title>
-    <link rel="stylesheet" href="../css/main.css">
+      <link rel="stylesheet" href="../css/main.css">
+        <title>My Title</title>
+
   </head>
     <body>
         <div class="large-12 columns">
@@ -53,10 +51,11 @@
               </table>
              </div>
             </div>
-     <script src="./vendor/jquery.min.js"></script>
-     <script src="./vendor/lodash.min.js"></script>
-     <script src="./vendor/firebase.js"></script>
+     <script src="public/vendor/jquery.min.js"></script>
+     <script src="public/vendor/firebase.js"></script>
      <script src="js/main.js"></script>
   </body>
 </html>
+
+
 
