--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
         <br>
         <button type="button" id="loginbutton">Login</button>
         <button type="button" id="register">Register</button>
+        <button type="button" id="signout" class="hidden">Sign Out</button>
         </form>
          <div>
           <button id="newcontactbutton" type="button">New Contact</button>
@@ -51,8 +52,8 @@
               </table>
              </div>
             </div>
-     <script src="public/vendor/jquery.min.js"></script>
-     <script src="public/vendor/firebase.js"></script>
+     <script src="./vendor/jquery.min.js"></script>
+     <script src="./vendor/firebase.js"></script>
      <script src="js/main.js"></script>
   </body>
 </html>
